# vimg

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  vimg-plan.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  context_menu.rs  convert.rs  expand.rs  main.rs  optimize.rs  pipeline.rs  update.rs
