[package]
name = "vimg"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rgb = "0.8"
webp = "0.3"
oxipng = "9"
rayon = "1.10"
anyhow = "1"
thiserror = "1"
indicatif = "0.17"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
